--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "antd": "^5.6.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "json-server": "^0.17.3",
+    "mongodb": "^5.7.0",
     "next": "13.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.2",
+    "react-hot-toast": "^2.4.1",
+    "react-redux": "^8.1.1",
     "sharp": "^0.32.4"
   }
 }
